--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,28 +1,33 @@
 
-
-.logo {
+.container {
+    display: flex;
+  }
+  
+  .left, .right {
+    flex: 1;
+    padding: 10px;
+  }
+  
+  img {
+    max-width: 100%;
+    height: auto;
+  }
+  
+  .logo {
     max-width: 100px; 
     height: auto;     /* Permite que la altura se ajuste automáticamente para mantener la proporción */
   }
-.navbar {
-    background-color: rgb(243, 160, 105); /* Cambia el color de fondo de la barra de navegación */
-    padding-left: 8%;
-    padding-right: 8%;
-    box-shadow: 0 0 15px rgba(0, 0, 0, 0.5);
-  }
-  
-  .navbar-nav .nav-link {
-    color: white !important; /* Añade !important para asegurarte de que esta regla tenga prioridad */
-    font-weight: bold;
-    font-size: 18px;
-  }
-
 /*--------------carrucel---------------*/
 .carousel-item img {
     border-radius: 50px;
     padding: 1%;
     margin:auto;
     
+  }
+
+  img {/*modifica el tamanio de el carrucel*/
+    max-width: 90%;
+    height: auto;
   }
   
  /*--------------index---------------*/
@@ -44,10 +49,7 @@
     flex-direction: column;
   }
   
-  img {
-    max-width: 100%;
-    height: auto;
-  }
+
 
   /*tarjeta1*/
 
@@ -67,8 +69,8 @@
 
   /*----------footer-------*/
   footer {
-    background-color: rgb(243, 160, 105);
-    color: #fff;
+    background-color: #212529;
+    color: #b9bfc6;
     padding: 20px 0;
   }
   
