--- a/css/estilo.css
+++ b/css/estilo.css
@@ -23,7 +23,7 @@
 /*----------------------header--------------------------*/
 
 .header .navbar{
-  background-color:rgba(162, 121, 44, 0)!important;
+  background-color: #fff3e6!important;
 }
 /* Modifica el tamaño y color de los elementos del navbar */
 .navbar-nav .nav-link {
@@ -56,7 +56,7 @@
   display: flex;
   margin-top: 2%;
   margin-bottom: 2%;
-  margin-top: -23.8%;
+  margin-top: -19.6%;
   
   
 }
@@ -120,9 +120,9 @@
 .adopta-companero {
   margin-top: 10%;
   margin-right: 15%;
-  background-color: #ff991c; /* Color de fondo verde */
+  background-color: #dc7c05; /* Color de fondo verde */
   color: #eaeaea; /* Color del texto blanco */
-  border: 5px #4CAF50; /* Borde verde */
+  border: 5px #ffffff; /* Borde verde */
 }
 
 .adopta-companero:hover {
@@ -132,6 +132,53 @@
 }
 
 
+/*----------------cartas-index----------------*/
+.container-inform {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  background-color: #fff3e6;
+}
+
+.container-cards {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
+  margin: 5%;
+}
+
+.info-cards {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 45px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease-in-out, transform 0.3s ease-in-out;
+}
+
+.info-cards:hover {
+  background-color: #ffffffc1; /* Cambia el color al pasar el ratón sobre la tarjeta */
+  transform: scale(1.05); /* Ajusta el tamaño al pasar el ratón sobre la tarjeta */
+}
+
+.info-cards img {
+  max-width: 100%;
+  border-radius: 5px;
+  margin-bottom: 10px;
+}
+
+.info-cards h3 {
+  font-size: 24px;
+  color: #333;
+}
+
+.info-cards p {
+  font-size: 16px;
+  color: #666;
+}
 
 
 /*----------footer-------*/
@@ -203,8 +250,6 @@ footer {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 7%;
-  margin-top: -10%;
   background-color: #fff3e6;
 }
 
