--- a/css/estilo.css
+++ b/css/estilo.css
@@ -16,8 +16,8 @@
   height: auto;
 }
 .index-main{
-  background-color: #ffa73b;
-  box-shadow: 0 0 25px rgb(111, 55, 0)
+  background-color: #7097a8;
+  box-shadow: 0 0 25px rgb(1, 51, 116)
 }
 
 /*----------------------header--------------------------*/
@@ -72,7 +72,7 @@
 }
 
 .index-main .container img {
-  max-width: 80%;
+  max-width: 70%;
 }
 
 .index-main h1 {
@@ -98,7 +98,7 @@
 .index-main .container .right img {
   object-fit: contain;
   border-radius: 50%;
-  background-color: beige;
+  background-color: rgb(253, 253, 237);
   box-shadow: 0 0 30px rgb(255, 249, 221);
 }
 
@@ -120,7 +120,7 @@
 .adopta-companero {
   margin-top: 10%;
   margin-right: 15%;
-  background-color: #dc7c05; /* Color de fondo verde */
+  background-color: #dc7c05; /* Color de botton */
   color: #eaeaea; /* Color del texto blanco */
   border: 5px #ffffff; /* Borde verde */
 }
@@ -141,6 +141,8 @@
   padding-top: 3%;
   padding-bottom: 3%;
   background-color: #fff3e6;
+  
+  
 }
 
 .container-cards {
@@ -260,14 +262,23 @@ footer {
 }
 
 .index-home-bienvenida h1 {
-  font-size: 36px;
+  font-size: 5.5rem;
   margin-bottom: 10px;
+  font-family: 'Londrina Solid', sans-serif;
+  color: #2e6678;
+  text-shadow: 2px 2px 10px rgb(167, 167, 167);
+  font-weight: bold;
+  text-align:center;
+  padding-right: 10%;
   
 }
 
 .index-home-bienvenida p {
-  font-size: 18px;
+  font-size: 28px;
   padding-bottom: 50%;
+  color: #ffffff;
+  text-shadow: 2px 2px 10px rgb(167, 167, 167);
+  font-weight: bold;
 }
 
 /* Estilos para la sección de la imagen */
@@ -281,4 +292,94 @@ footer {
   height: auto;
   border-radius: 10px;
   
+}
+/*----boton-index-home----*/
+.boton-ayuda {
+  display: inline-block;
+  padding: 15px 30px;
+  border-radius: 30px;
+  text-decoration: none;
+  font-size: 18px;
+  font-weight: bold;
+  text-align: right;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out, color 0.3s ease-in-out, border 0.3s ease-in-out;
+}
+
+/* Estilo específico para el botón con la clase .adopta-companero */
+.boton-ayuda {
+  margin-left: 30%;
+  margin-top: 5%;
+  background-color: #7aabd0; /* Color de fondo verde */
+  color: #eaeaea; /* Color del texto blanco */
+  border: 5px #ffffff; /* Borde verde */
+}
+
+.boton-ayuda:hover {
+  background-color: #0015b1; /* Cambio de color de fondo al pasar el ratón sobre el botón */
+  color: #ffffff; /* Cambio de color del texto al pasar el ratón sobre el botón */
+  box-shadow: 0 0 5px rgba(221, 232, 255, 0.612);
+}
+
+
+/*---*/
+/* requisitos-adopcion*/
+
+
+.info-adopcion {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  gap: 20px;
+  text-align: center; /* Centra el contenido en el eje horizontal */
+  margin: 5%;
+  padding-bottom: 5%;
+  background-color: ;
+}
+
+.info-adopcion-item{
+  background-color: #eeeeee;
+  box-shadow: 0 0 5px rgb(160, 160, 160);
+}
+
+.info-adopcion-titulo {
+  grid-column: span 2;
+}
+
+.info-adopcion-titulo h2,
+.info-adopcion-titulo p {
+  margin: 0; /* Elimina el margen predeterminado para mejorar la apariencia */
+  text-align: center;
+  
+}
+
+
+.info-adopcion-item {
+  display: flex;
+  border: 1px solid #ccc;
+  border-radius: 10px;
+  margin-bottom: 15px;
+}
+
+.info-adopcion-item img {
+  border-radius: 10px 0 0 10px;
+  max-width: 85%;
+  object-fit: cover;
+  margin-top: 50%;
+  margin-bottom: 40%;
+  margin-left: 40%;
+}
+
+.info-adopcion-item .info-texto {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  padding: 15px;
+}
+
+.info-adopcion-item h4 {
+  margin-bottom: 10px;
+}
+
+.info-adopcion-item p {
+  margin: 0;
 }
